--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -7,7 +7,7 @@ body {
     }
 
     .alert:last-of-type {
-      margin-bottom: 0;
+      @extend .m-b-0;
     }
   }
 
